# moby-scene-navigation

./: .gitignore  README.md  navigate_to_pose_llm.xml
src/bt_plugins/: CMakeLists.txt  bt_plugins.xml  package.xml
src/bt_plugins/src/: is_human_detected.cpp
src/deep_sort_tracker/: package.xml  setup.cfg  setup.py
src/deep_sort_tracker/config/: params.yaml
src/deep_sort_tracker/deep_sort_tracker/: deep_sort_tracker.py  test.py
src/deep_sort_tracker/launch/: deep_sort_launcher.launch.py
src/human_3d_locator/: package.xml  setup.cfg  setup.py
src/human_3d_locator/human_3d_locator/: tracker_node_3d.py
src/human_3d_locator/launch/: human_3d_locator.launch.py
src/mot17_publisher/: package.xml  setup.cfg  setup.py  test.py
src/mot17_publisher/mot17_publisher/: gt_publisher.py  mot17_image_publisher.py
src/ros_llm/llm_config/llm_config/: user_config.py
src/ros_llm/llm_model/: setup.py
src/ros_llm/llm_model/llm_model/: chatgpt.py  scene_understanding.py  scene_understanding_service.py
src/trajectory_watcher/: .gitignore  package.xml  setup.cfg  setup.py
src/trajectory_watcher/launch/: trajectory_watcher_launch.py
src/trajectory_watcher/trajectory_watcher/: trajectory_watcher_node.py
src/ultralytics_ros/: .clang-format  .gitignore  CMakeLists.txt  README.md
src/ultralytics_ros/include/tracker_with_cloud_node/: tracker_with_cloud_node.h
src/ultralytics_ros/launch/: 3d_detector_launch.py  tracker.launch.xml  tracker_with_cloud.launch.xml
src/ultralytics_ros/msg/: YoloResult.msg
src/ultralytics_ros/script/: 3d_tracker_node.py  tracker_node.py  tracker_node_3d.py
src/ultralytics_ros/src/: tracker_with_cloud_node.cpp
