<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deep_sort_tracker</name>
  <version>0.1.0</version>
  <description>A ROS2 package for tracking using the DeepSORT algorithm.</description>

  <!-- Maintainer Information -->
  <maintainer email="ganesh@sphaira.com">Ganesh Thimmankatti</maintainer>

  <!-- License -->
  <license>Sphaira Inc.</license>

  <!-- Build Tool -->
  <buildtool_depend>setuptools</buildtool_depend>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>numpy</depend>
  <depend>torch</depend>
  <depend>ultralytics_ros</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export Build Type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
